--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7643460f",
+   "id": "2b442058",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81d751ab",
+   "id": "e4772f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3abd962b",
+   "id": "a687a1fe",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01e67b8d",
+   "id": "1f55ddbc",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a347e086",
+   "id": "c51ab1b3",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37e59f2",
+   "id": "bd85016d",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4981c63d",
+   "id": "1e114220",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9195b4af",
+   "id": "f0b2a6dd",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d374ad92",
+   "id": "dc9b93ad",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8fa6613a",
+   "id": "049367bb",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6241babb",
+   "id": "89bb10c1",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f740e9c8",
+   "id": "a82f19cc",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b3f263d1",
+   "id": "16e43fd0",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8b1324a",
+   "id": "028599dc",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e23151f6",
+   "id": "dd4498b7",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cd77b255",
+   "id": "b5f71fad",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6e610989",
+   "id": "fd67a66d",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "348317fc",
+   "id": "e5b1b821",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "172144e4",
+   "id": "87add6e0",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "710b2f14",
+   "id": "e51dff2f",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a331b46c",
+   "id": "8bce0e6a",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "481a2578",
+   "id": "8c84d20a",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8fe92dee",
+   "id": "2406ecef",
    "metadata": {},
    "outputs": [
     {
@@ -502,26 +502,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "16d9e89e",
+   "execution_count": 74,
+   "id": "1baf5e26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write your favourite word: volleyball\n",
+      "Chose a number: 4\n",
+      "string and numeric\n"
+     ]
+    }
+   ],
    "source": [
     "string=input('Write your favourite word: ')\n",
-    "numeric=input('Chose a number: ')\n",
+    "numeric=int(input('Chose a number: '))\n",
+    "\n",
     "\n",
     "if numeric<0:\n",
     "    print('Index is too low')\n",
     "if numeric>len(string):\n",
     "    print('Index is too high')\n",
     "else:\n",
-    "    print ({string} {numeric})"
+    "    print ('index numeric in string is: )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10217a3e",
+   "id": "3ab8b75b",
    "metadata": {},
    "outputs": [],
    "source": []
