--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c2228763",
+   "id": "dd2499ee",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3cb4ab1b",
+   "id": "5002f1f2",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eb784c12",
+   "id": "2ce464f5",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c509e12f",
+   "id": "020bca7c",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "92f05374",
+   "id": "12bf5eb8",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "022bc67d",
+   "id": "7491e64a",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e7e8593c",
+   "id": "2a18bb83",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "49296778",
+   "id": "3728167b",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c24bae93",
+   "id": "5936bf41",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c962bbc4",
+   "id": "0d70a8b4",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e8551a02",
+   "id": "3689775a",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "229eea35",
+   "id": "30627985",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f94122e3",
+   "id": "7d698a5c",
    "metadata": {},
    "outputs": [
     {
@@ -305,14 +305,15 @@
    "source": [
     "text=input(\"Write a name of a fruit\")\n",
     "index=input(\"Write a inxed number to get the character\")\n",
-    "int(index)\n",
-    "if inde"
+    "index=int(index)\n",
+    "if index<0 or index>=len(text)-1:\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "387fc6e9",
+   "id": "d193de8b",
    "metadata": {},
    "outputs": [],
    "source": []
