--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eb588146",
+   "id": "1942aa05",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14a27599",
+   "id": "c42567fa",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c32f09ab",
+   "id": "d0c146bc",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e09706f1",
+   "id": "3adfee53",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f4ced882",
+   "id": "4dca2202",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c70aa002",
+   "id": "fbfab8ad",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77eed6be",
+   "id": "27d5c8b2",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "56ec4b30",
+   "id": "52a6096d",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b27cc896",
+   "id": "c36054ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d11c8036",
+   "id": "36084524",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04bc1a23",
+   "id": "4f2a4aa1",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "26627df1",
+   "id": "e8509dd6",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "875e78f3",
+   "id": "d15cf781",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6f68158b",
+   "id": "f65e0db5",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91639799",
+   "id": "2d1c6da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "510659f8",
+   "id": "e79e17ee",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a6afb1b0",
+   "id": "ec1b3afe",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "791718f9",
+   "id": "87cafaec",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5c6151a4",
+   "id": "19aa8b8c",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "204bb5f9",
+   "id": "5f61280f",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "14bd126a",
+   "id": "1eae9364",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "dd990922",
+   "id": "2c924504",
    "metadata": {},
    "outputs": [
     {
@@ -439,10 +439,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9ae5dd",
+   "id": "ab737847",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str = input('Enter the string: ')"
+   ]
   }
  ],
  "metadata": {
