--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bd23c8e",
+   "id": "6c97f1f0",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "33e2820e",
+   "id": "28b3a48d",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a5c57a5b",
+   "id": "d625c655",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f9f8ab40",
+   "id": "b1571bfa",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f83e2730",
+   "id": "0a9a7517",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "16b942b5",
+   "id": "bd9d6bff",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0ad05845",
+   "id": "a3327b61",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1c9bb621",
+   "id": "338993f1",
    "metadata": {},
    "outputs": [
     {
@@ -254,14 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b38ebf38",
+   "execution_count": 62,
+   "id": "b559aeef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (364770348.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[62], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'the text entered is '{test} {x} )\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
    "source": [
     "text= input('please enter a text')\n",
     "number=input('please enter a number')\n",
     "count=len(text)\n",
+    "x=text(number)\n",
     "if number < 0:\n",
     "    print('This is too low')\n",
     "    number=input('Try again!')\n",
@@ -269,9 +279,17 @@
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
     "else:\n",
-    "    \n",
+    "    print(f'the text entered is {test} {x} ')\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a05628",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
