--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "30de290c",
+   "id": "59fe4e9a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a9686eb4",
+   "id": "e701c48b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed75d81",
+   "id": "35912b39",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb139902",
+   "id": "29040b39",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5af4016c",
+   "id": "2d869111",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a8c03aa6",
+   "id": "18ec060e",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d1a1c6b8",
+   "id": "ecd7671a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1d957bea",
+   "id": "d9ac0fab",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "96337c7f",
+   "id": "fb991db1",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "44389b73",
+   "id": "c1c245c7",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "01c1a40d",
+   "id": "14ea47f2",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a75aa5d5",
+   "id": "3cd75d67",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e4fc89f5",
+   "id": "f4e4ceda",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9a79f23c",
+   "id": "e8207584",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2e5ab9f1",
+   "id": "6015a7be",
    "metadata": {},
    "outputs": [
     {
@@ -331,10 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57248248",
+   "execution_count": 64,
+   "id": "24374bd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word:asd\n",
+      "Enter an index3\n",
+      "Index is beyond the length of a the string\n"
+     ]
+    }
+   ],
    "source": [
     "word = input('Enter a word:')\n",
     "ind = input('Enter an index')\n",
@@ -342,14 +352,16 @@
     "\n",
     "if ind<0:\n",
     "    print('Index is too low.')\n",
-    "elif ind>int(len(word)):\n",
-    "    print(f'Index is beyond the length of a the string')\n"
+    "elif ind>int(len(word)-1):\n",
+    "    print(f'Index is beyond the length of a the string')\n",
+    "else:\n",
+    "    print(f'Index {int} of {word} is len[])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9495d6c9",
+   "id": "94dd63b3",
    "metadata": {},
    "outputs": [],
    "source": []
