--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b3dee41",
+   "id": "be949ba7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "40840f50",
+   "id": "9fa5f684",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fe3c1a9d",
+   "id": "405aaa7a",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "225ec696",
+   "id": "f3f15e3e",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5cef01ae",
+   "id": "e4c6777f",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "21a7f525",
+   "id": "898e9196",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bededd06",
+   "id": "2a749c53",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "759e2a60",
+   "id": "b90379b2",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6ea6bfd8",
+   "id": "55fb9cdd",
    "metadata": {},
    "outputs": [
     {
@@ -198,10 +198,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ecf2dac4",
+   "execution_count": 47,
+   "id": "d7796af0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string : pineapple\n",
+      "Enter the index : 5\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'txt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m id1 \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m :\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou entered negative number\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m id1 \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mtxt\u001b[49m) :\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou entered too big index\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m :\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'txt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "txt1 = input('Enter the string : ')\n",
     "id1 = input('Enter the index : ')\n",
@@ -211,9 +231,17 @@
     "elif id1 > len(txt) :\n",
     "    print('You entered too big index')\n",
     "else :\n",
-    "    print(f'Y)\n",
+    "    print(f'Your word is {txt1} and its {id1} chcracter is txt1[id1-1]' )\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90645f05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
