--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab6bb0f3",
+   "id": "1fcd3a66",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df05d2d2",
+   "id": "8e519cdf",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb43f8bc",
+   "id": "27feb776",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bf49103f",
+   "id": "e371d095",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eaababf9",
+   "id": "4191e3d0",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "74064b30",
+   "id": "7af5786d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "47ce05c7",
+   "id": "80464b82",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b2f72239",
+   "id": "42554c05",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37798b9",
+   "id": "eb1b0f74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09be3dea",
+   "id": "44f06ba8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "30a878af",
+   "id": "4b6c5643",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0801b8f1",
+   "id": "1acb0024",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "93348b93",
+   "id": "aa7b73a0",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "802fd40a",
+   "id": "6b77d0f8",
    "metadata": {},
    "outputs": [
     {
@@ -292,46 +292,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "7aa21df7",
+   "execution_count": null,
+   "id": "37569b34",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: taco\n",
-      "Enter an index: 2\n",
-      "1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[65], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m numberofindex \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(index)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(numberofindex)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mindex\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mword\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is too big, and beyond index of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(word[len(index)])\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+      "Enter a word: tac\n"
      ]
     }
    ],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
-    "numberofindex = len(index)\n",
+    "numberofindex = int(index)\n",
     "\n",
-    "print(numberofindex)\n",
-    "if index > len(word):\n",
+    "if numberofindex > len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
-    "else: print(\"(word[len(index)])\")"
+    "else: print(word[numberofindex])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0dac5b5",
+   "id": "0d14b939",
    "metadata": {},
    "outputs": [],
    "source": []
