--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2346b804",
+   "id": "7a9374ee",
    "metadata": {},
    "outputs": [
     {
@@ -177,10 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "557cbad8",
+   "execution_count": 43,
+   "id": "a70ecd63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated f-string literal (detected at line 9) (1635132797.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[43], line 9\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'index {num1} in \\'{str1}\\' is str1[num1])\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated f-string literal (detected at line 9)\n"
+     ]
+    }
+   ],
    "source": [
     "str1 = input('Enter string: ')\n",
     "num1 = input('Enter number beyond the index of string: ')\n",
@@ -188,8 +197,18 @@
     "if num1 < 0:\n",
     "    print(f'{num1} is too low.')\n",
     "elif num1 > len(str1):\n",
-    "    print()\n"
+    "    print(f'{num1} is too high')\n",
+    "else:\n",
+    "    print(f'index {num1} in \\'{str1}\\' is str1[num1])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978298f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
