--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b442058",
+   "id": "64047a08",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4772f36",
+   "id": "e034ac51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a687a1fe",
+   "id": "8866257e",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f55ddbc",
+   "id": "66b2b46e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c51ab1b3",
+   "id": "5c54f317",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd85016d",
+   "id": "4ef4e883",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1e114220",
+   "id": "eae6c302",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f0b2a6dd",
+   "id": "9a941f6e",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc9b93ad",
+   "id": "4fab8e9a",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "049367bb",
+   "id": "f94370ac",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "89bb10c1",
+   "id": "b7b51cc1",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a82f19cc",
+   "id": "9777411a",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "16e43fd0",
+   "id": "17d1d132",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "028599dc",
+   "id": "38e4b102",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dd4498b7",
+   "id": "19e0edf2",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b5f71fad",
+   "id": "fa1364f1",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fd67a66d",
+   "id": "cd8bf542",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e5b1b821",
+   "id": "a743a829",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "87add6e0",
+   "id": "1595bc1f",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e51dff2f",
+   "id": "0de2afe7",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8bce0e6a",
+   "id": "bef303f7",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8c84d20a",
+   "id": "922839f2",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "2406ecef",
+   "id": "244152cc",
    "metadata": {},
    "outputs": [
     {
@@ -502,8 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "1baf5e26",
+   "execution_count": 76,
+   "id": "599a7403",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
      "text": [
       "Write your favourite word: volleyball\n",
       "Chose a number: 4\n",
-      "string and numeric\n"
+      "index 4 in volleyball is: e\n"
      ]
     }
    ],
@@ -526,13 +526,13 @@
     "if numeric>len(string):\n",
     "    print('Index is too high')\n",
     "else:\n",
-    "    print ('index numeric in string is: )"
+    "    print (f'index {numeric} in {string} is: {string[numeric]}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab8b75b",
+   "id": "6d926afd",
    "metadata": {},
    "outputs": [],
    "source": []
