--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,15 +187,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7f3196",
+   "id": "201119c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input ('Enter a word')\n",
     "index = int (input ('Enter an index number: '))\n",
-    "if s[name] < 10 :\n",
-    "    print('Too low')\n",
-    "elif s[name] < 10 :\n",
+    "if index < 0 :\n",
+    "    print('num is Too low')\n",
+    "elif s[name] > 10 :\n",
     "    print ('Too low')\n",
     "elif x > 10:\n",
     "    print ('Too High')"
