--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd2499ee",
+   "id": "6ad212aa",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5002f1f2",
+   "id": "6ce900bb",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ce464f5",
+   "id": "6c5fb1cd",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "020bca7c",
+   "id": "5f45d7aa",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "12bf5eb8",
+   "id": "3ca10a15",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7491e64a",
+   "id": "f4fcfc39",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2a18bb83",
+   "id": "be4d72e8",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3728167b",
+   "id": "4d3c5694",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5936bf41",
+   "id": "59073b63",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0d70a8b4",
+   "id": "bf563b16",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3689775a",
+   "id": "e851719a",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "30627985",
+   "id": "b1edd37c",
    "metadata": {},
    "outputs": [
     {
@@ -290,15 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "7d698a5c",
+   "execution_count": 64,
+   "id": "727994fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a name of a fruitAnannas\n"
+      "Write a name of a fruitPinnaple\n",
+      "Write a inxed number to get the character43\n",
+      "beyond the bounds of string\n"
      ]
     }
    ],
@@ -307,13 +309,15 @@
     "index=input(\"Write a inxed number to get the character\")\n",
     "index=int(index)\n",
     "if index<0 or index>=len(text)-1:\n",
-    "    print()"
+    "    print(\"beyond the bounds of string\")\n",
+    "else:\n",
+    "    print(text[index])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d193de8b",
+   "id": "7f699ea9",
    "metadata": {},
    "outputs": [],
    "source": []
