--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c97f1f0",
+   "id": "8bd9838d",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "28b3a48d",
+   "id": "6c1ec9bb",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d625c655",
+   "id": "447620d4",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b1571bfa",
+   "id": "b14e6362",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0a9a7517",
+   "id": "030ac1cb",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "bd9d6bff",
+   "id": "1d97ec45",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a3327b61",
+   "id": "75901387",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "338993f1",
+   "id": "b0793249",
    "metadata": {},
    "outputs": [
     {
@@ -254,28 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b559aeef",
+   "execution_count": null,
+   "id": "1fa55c87",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (364770348.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[62], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'the text entered is '{test} {x} )\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text= input('please enter a text')\n",
     "number=input('please enter a number')\n",
+    "number=int(number)\n",
     "count=len(text)\n",
-    "x=text(number)\n",
+    "x=text[number]\n",
     "if number < 0:\n",
     "    print('This is too low')\n",
     "    number=input('Try again!')\n",
-    "elif count > number:\n",
+    "elif count < number:\n",
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
     "else:\n",
@@ -286,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a05628",
+   "id": "7732f1c1",
    "metadata": {},
    "outputs": [],
    "source": []
