--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be949ba7",
+   "id": "670d605d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fa5f684",
+   "id": "7cedb3c7",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "405aaa7a",
+   "id": "2179f83d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f15e3e",
+   "id": "44a80306",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e4c6777f",
+   "id": "d24956bd",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "898e9196",
+   "id": "f27ff79b",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2a749c53",
+   "id": "8562714b",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b90379b2",
+   "id": "e0df03e2",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "55fb9cdd",
+   "id": "2214a606",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "d7796af0",
+   "execution_count": 53,
+   "id": "8e0e1ab9",
    "metadata": {},
    "outputs": [
     {
@@ -207,18 +207,8 @@
      "output_type": "stream",
      "text": [
       "Enter the string : pineapple\n",
-      "Enter the index : 5\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'txt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m id1 \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m :\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou entered negative number\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m id1 \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mtxt\u001b[49m) :\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou entered too big index\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m :\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'txt' is not defined"
+      "Enter the index : 0\n",
+      "Your word is pineapple and its 0 chcracter is e\n"
      ]
     }
    ],
@@ -228,17 +218,17 @@
     "id1 = int(id1)\n",
     "if id1 < 0 :\n",
     "    print('You entered negative number')\n",
-    "elif id1 > len(txt) :\n",
+    "elif id1 > len(txt1) :\n",
     "    print('You entered too big index')\n",
     "else :\n",
-    "    print(f'Your word is {txt1} and its {id1} chcracter is txt1[id1-1]' )\n",
+    "    print(f'Your word is {txt1} and its {id1} chcracter is {txt1[id1-1]}' )\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90645f05",
+   "id": "eef13d8a",
    "metadata": {},
    "outputs": [],
    "source": []
