--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "59fe4e9a",
+   "id": "582d7029",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e701c48b",
+   "id": "d6e44cde",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35912b39",
+   "id": "2bcaf205",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29040b39",
+   "id": "484b6af0",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d869111",
+   "id": "63fa38a1",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "18ec060e",
+   "id": "0342df3d",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ecd7671a",
+   "id": "9c14c7c0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d9ac0fab",
+   "id": "4e95dd8b",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb991db1",
+   "id": "d4f47305",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c1c245c7",
+   "id": "71870cac",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "14ea47f2",
+   "id": "4f89b792",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3cd75d67",
+   "id": "bd65b252",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f4e4ceda",
+   "id": "c0859e56",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e8207584",
+   "id": "61aed346",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6015a7be",
+   "id": "d3b75822",
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "24374bd2",
+   "execution_count": 65,
+   "id": "e34c8d20",
    "metadata": {},
    "outputs": [
     {
@@ -340,8 +340,8 @@
      "output_type": "stream",
      "text": [
       "Enter a word:asd\n",
-      "Enter an index3\n",
-      "Index is beyond the length of a the string\n"
+      "Enter an index0\n",
+      "Index <class 'int'> of asd is word[ind]\n"
      ]
     }
    ],
@@ -355,13 +355,14 @@
     "elif ind>int(len(word)-1):\n",
     "    print(f'Index is beyond the length of a the string')\n",
     "else:\n",
-    "    print(f'Index {int} of {word} is len[])"
+    "    print(word[ind])\n",
+    "    #    print(f'Index {int} of {word} is word[ind]')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94dd63b3",
+   "id": "43d92e31",
    "metadata": {},
    "outputs": [],
    "source": []
