--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1fcd3a66",
+   "id": "555f5ac3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e519cdf",
+   "id": "bcab197d",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27feb776",
+   "id": "c0637194",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e371d095",
+   "id": "9e567bff",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4191e3d0",
+   "id": "3a3f3a72",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7af5786d",
+   "id": "b6ecfc1e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "80464b82",
+   "id": "ed5fd9d7",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "42554c05",
+   "id": "2573683a",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb1b0f74",
+   "id": "7c761f6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44f06ba8",
+   "id": "3d35927a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4b6c5643",
+   "id": "2161044e",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1acb0024",
+   "id": "1e3b641c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "aa7b73a0",
+   "id": "7ab30588",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6b77d0f8",
+   "id": "ca540c35",
    "metadata": {},
    "outputs": [
     {
@@ -292,15 +292,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37569b34",
+   "execution_count": 78,
+   "id": "6ddf1f4c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: tac\n"
+      "Enter a word: taco\n",
+      "Enter an index: 4\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[78], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m numberofindex \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(word):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is too big, and beyond index of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIndex \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumberofindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of the word \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is the letter \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(\u001b[43mword\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnumberofindex\u001b[49m\u001b[43m]\u001b[49m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
      ]
     }
    ],
@@ -311,13 +323,13 @@
     "\n",
     "if numberofindex > len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
-    "else: print(word[numberofindex])"
+    "else: print(f\"Index {numberofindex} of the word {word} is the letter {(word[numberofindex])}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d14b939",
+   "id": "cd56a170",
    "metadata": {},
    "outputs": [],
    "source": []
