--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "011a59e4",
+   "id": "4abb0a7a",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "14258993",
+   "id": "5dd6cb52",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "99385ce3",
+   "id": "f32e7466",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6269ace8",
+   "id": "d41b93ba",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "6a61f3a4",
+   "id": "beaf6967",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6bd78e68",
+   "id": "ca25dcdd",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "7f92da41",
+   "id": "89175f84",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ee534c93",
+   "id": "12bd6349",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "9cdc86bf",
+   "id": "9fdf1bea",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e38715be",
+   "id": "cf3770cd",
    "metadata": {},
    "outputs": [
     {
@@ -540,41 +540,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "d3d422c0",
+   "execution_count": 108,
+   "id": "f70a6854",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a word: pineapple\n",
-      "Enter a number: 5\n"
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3568989988.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[108], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    if index < 0:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'e'"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
     "index = input('Enter a number: ')\n",
+    "index = int(index)\n",
     "s[5]\n",
-    "if index < 0:"
+    "if index < 0:\n",
+    "    print('index 5 in 'pineapple' is 'p'')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05cffe85",
+   "id": "53691630",
    "metadata": {},
    "outputs": [],
    "source": []
